# OrionTranslator

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
alnilam/: Cargo.toml  README.md  build.rs  common_prompt.txt
alnilam/rules/: ja2zh_context_rules.json
alnilam/src/: config.rs  lib.rs  main.rs  pipeline.rs  txt.rs
alnilam/src/checker/: auto_fixer.rs  mod.rs  response_checker.rs  types.rs
alnilam/src/context/: detector.rs  mod.rs  selector.rs  trie.rs  types.rs
alnilam/src/epub/: format_fixer.rs  handler.rs  mod.rs
alnilam/src/llm/: client.rs  glossary.rs  mod.rs  parser.rs  prompt.rs
alnitak/: Cargo.toml  README.md  build.rs
alnitak/src/: app.rs  handlers.rs  main.rs  types.rs  ui.rs  utils.rs
bellatrix/: Cargo.toml  README.md
bellatrix/src/: detector.rs  embedding.rs  lib.rs  llm.rs  loader.rs  model.rs  tokenizer.rs
betelgeuse/: Cargo.toml  README.md
betelgeuse/src/: epub.rs  lib.rs  txt.rs
mintaka/: Cargo.toml  README.md
mintaka/src/: analysis.rs  detector.rs  llm.rs  main.rs  ner_client.rs
rigel/: Cargo.toml  README.md
rigel/src/: api.rs  batcher.rs  main.rs  model.rs  ner.rs
scripts/: build_macos.sh  build_windows.sh
