[package]
name = "alnitak"
version = "0.3.0"
edition = "2021"
description = "Orion EPUB/TXT translator GUI"

[[bin]]
name = "alnitak"
path = "src/main.rs"

[dependencies]
alnilam = { path = "../alnilam" }
bellatrix = { path = "../bellatrix" }
betelgeuse = { path = "../betelgeuse" }
anyhow = "1"
gpui = "0.2.2"
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"
tokio = { version = "1", features = ["full"] }
smol = "2"
naga = { version = "26.0.0", default-features = false, features = ["termcolor"] }

[target.'cfg(windows)'.build-dependencies]
# Embeds logo.ico as a Windows PE resource (exe icon + taskbar icon)
winresource = "0.1"

[lints.clippy]
dbg_macro = "allow"
todo = "allow"
