[package]
name = "bellatrix"
version = "0.1.0"
edition = "2021"
description = "Embedded NER model inference + glossary generation library"

[features]
default = ["wgpu"]
wgpu = ["burn/wgpu"]
ndarray = ["burn/ndarray"]

[dependencies]
# Burn framework
burn = { version = "0.20.1", default-features = false, features = [
  "dataset",
  "std",
] }
cubecl-runtime = { version = "0.9.0", features = [
  "channel-mpsc",
] }

# Safetensors loading via candle
candle-core = { version = "0.8.4" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Japanese tokenizer
vibrato = "0.5"
zstd = "0.13"

# Logging
log = "0.4"

# Math
libm = "0.2.8"

# HTTP client (for LLM API calls)
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
