[package]
name = "rigel"
version = "0.1.0"
edition = "2021"

[features]
default = ["wgpu"]
wgpu = ["burn/wgpu"]
ndarray = ["burn/ndarray"]
cuda = ["burn/cuda"]

[dependencies]
# Burn framework
burn = { version = "0.20.1", default-features = false, features = [
  "dataset",
  "std",
] }
cubecl-runtime = { version = "0.9.0", features = [
  "channel-mpsc",
] }

# Safetensors loading via candle
candle-core = { version = "0.9.2" }

# Tokenizer
derive-new = "0.7.0"

# Web server
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.8.8", features = ["json"] }
tower-http = { version = "0.6.8", features = ["cors"] }

# Japanese tokenizer
vibrato = "0.5"
zstd = "0.13"

# Logging
env_logger = "0.11"
log = "0.4"

# Async batching
futures = "0.3"

# Math
libm = "0.2.8"
